<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pakketracker</string>
    <string name="add_package">Legg til ny pakke</string>
    <string name="refresh">Oppdater</string>
    <string name="settings">Innstillinger</string>
    <string name="empty">Vennligst skriv inn et nummer</string>
    <string name="notificationpref">notificationPref</string>
    <string name="intervalVal">intervalVal</string>
    <string name="updatePref">updatePref</string>
    <string name="autostartPref">autostartPref</string>
    <string name="nightmodePref">nightmodePref</string>
    <string name="updateintervalDayPref">updateintervalDayPref</string>
    <string name="updateintervalNightPref">updateintervalNightPref</string>
</resources>
