<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  <ListPreference android:title="Oppdateringsintervall"
  	android:summary="Velg hvor ofte automatiske oppdateringer skal gjøres"
  	android:entries="@array/update_intervals" 
  	android:entryValues="@array/update_interval_values"
  	android:key="@string/intervalVal"
  	android:defaultValue="0"
  />
  <CheckBoxPreference 
  	android:title="Varsling"
  	android:defaultValue="true"
  	android:summary="Varsling om nye hendelser"
  	android:key="@string/notificationpref"
  />
  <CheckBoxPreference 
  	android:title="Oppdatering"
  	android:defaultValue="true"
  	android:summary="Oppdatere når programmet åpner"
  	android:key="@string/updatePref"
  />
  <CheckBoxPreference 
  	android:title="Automatisk oppstart"
  	android:defaultValue="false"
  	android:summary="Start programmet i bakgrunnen når du slår på telefonen"
  	android:key="@string/autostartPref"
  />
  <CheckBoxPreference 
  	android:title="Oppdateringshvile"
  	android:defaultValue="true"
  	android:summary="Ikke se etter oppdateringer utenom bestemt intervall"
  	android:key="@string/nightmodePref"
  />
  <EditTextPreference
  	android:title="Start"
	android:defaultValue="08:00"
	android:inputType="number"
  	android:dependency="@string/nightmodePref"
  	android:summary="Når den skal starte å se etter oppdateringer"
  	android:key="@string/updateintervalDayPref"
  />
  <EditTextPreference
  	android:title="Stopp"
	android:defaultValue="22:00"
	android:inputType="number" 
  	android:dependency="@string/nightmodePref"
  	android:summary="Når den skal slutte å se etter oppdateringer"
  	android:key="@string/updateintervalNightPref"
  />
</PreferenceScreen>
